--- a/definitions/sms.yml
+++ b/definitions/sms.yml
@@ -62,7 +62,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Message'
+                $ref: '#/components/schemas/SMS'
             text/xml:
               schema:
                 $ref: '#/components/schemas/MessageXmlWrapper'
