--- a/definitions/redact.yml
+++ b/definitions/redact.yml
@@ -88,175 +88,184 @@ components:
    ErrorUnsupportedProduct:
      description: Unsupported Product
      type: object
+     required:
+       - type
+       - title
+       - detail
+       - instance
      properties:
       type:
        type: string
-       required: true
        description: Link to error / remediation options
        example: https://developer.nexmo.com/api-errors/redact#invalid-product
       title:
        type: string
-       required: true
        description: Generic error message
        example: Invalid Product
       detail:
        type: string
-       required: false
        description: Additional information about the error
        example: No product corresponding to supplied string sms2!
       instance:
        type: string
-       required: true
        description: Internal Trace ID
        example: bf0ca0bf927b3b52e3cb03217e1a1ddf
 
    ErrorPrematureRedaction:
      description: Premature Redaction
      type: object
+     required:
+       - type
+       - title
+       - detail
+       - instance
      properties:
       type:
        type: string
-       required: true
        description: Link to error / remediation options
        example: https://developer.nexmo.com/api-errors/redact#premature-redaction
       title:
        type: string
-       required: true
        description: Generic error message
        example: Premature Redaction
       detail:
        type: string
-       required: false
        description: Additional information about the error
        example: You must wait 60 minutes before redacting ID '0A000000B0C9A1234'
       instance:
        type: string
-       required: true
        description: Internal Trace ID
        example: bf0ca0bf927b3b52e3cb03217e1a1ddf
 
    ErrorUnprovisioned:
      description: Unprovisioned
      type: object
+     required:
+       - type
+       - title
+       - detail
+       - instance
      properties:
       type:
        type: string
-       required: true
        description: Link to error / remediation options
        example: https://developer.nexmo.com/api-errors#unprovisioned
       title:
        type: string
-       required: true
        description: Generic error message
        example: Authorisation error
       detail:
        type: string
-       required: false
        description: Additional information about the error
        example: User=ABC123 is not provisioned to redact product=SMS
       instance:
        type: string
-       required: true
        description: Internal Trace ID
        example: bf0ca0bf927b3b52e3cb03217e1a1ddf
 
 
    ErrorUnauthorized:
      type: object
+     required:
+       - type
+       - error_title
      properties:
       type:
        type: string
-       required: true
        description: Machine readable error type
        example: UNAUTHORIZED
       error_title:
        type: string
-       required: true
        description: Error title
        example: Unauthorized
 
    ErrorInvalidJson:
      description: Invalid JSON
      type: object
+     required:
+       - type
+       - title
+       - detail
+       - instance
      properties:
       type:
        type: string
-       required: true
        description: Link to error / remediation options
        example: https://developer.nexmo.com/api-errors#invalid-json
       title:
        type: string
-       required: true
        description: Generic error message
        example: Invalid JSON
       detail:
        type: string
-       required: false
        description: Additional information about the error
        example: "Unexpected character ('\"' (code 34)): was expecting comma to separate Object entries"
       instance:
        type: string
-       required: true
        description: Internal Trace ID
        example: bf0ca0bf927b3b52e3cb03217e1a1ddf
 
    ErrorInvalidId:
      type: object
+     required:
+       - type
+       - title
+       - detail
+       - instance
      properties:
       type:
        type: string
-       required: true
        description: Link to error / remediation options
        example: https://developer.nexmo.com/api-errors#invalid-id
       title:
        type: string
-       required: true
        description: Generic error message
        example: Invalid ID
       detail:
        type: string
-       required: false
        description: Additional information about the error
        example: ID '0A000000B0C9A1234' could not be found (type=MT)
       instance:
        type: string
-       required: true
        description: Internal Trace ID
        example: bf0ca0bf927b3b52e3cb03217e1a1ddf
 
    ErrorThrottled:
      type: object
+     required:
+       - type
+       - title
+       - detail
+       - instance
      properties:
       type:
        type: string
-       required: true
        description: Link to error / remediation options
        example: https://developer.nexmo.com/api-errors/redact#rate-limit
       title:
        type: string
-       required: true
        description: Generic error message
        example: Rate Limit Hit
       detail:
        type: string
-       required: false
        description: Additional information about the error
        example: Please wait, then retry your request
       instance:
        type: string
-       required: true
        description: Internal Trace ID
        example: bf0ca0bf927b3b52e3cb03217e1a1ddf
 
    RedactTransaction:
      type: object
+     required:
+       - id
+       - product
+       - type
      properties:
        id:
-         required: true
          type: string
          description: The transaction ID to redact
        product:
-         required: true
          type: string
          example: sms
          description: Product name that the ID provided relates to
@@ -269,7 +278,6 @@ components:
          - message
          - workflow
        type:
-         required: false
          type: string
          enum:
          - inbound
