Signatures are for messages rather than requests

--- a/definitions/sms.yml
+++ b/definitions/sms.yml
@@ -43,7 +43,7 @@ paths:
             minLength: 16
             maxLength: 16
         - name: sig
-          description: The hash of the request parameters in alphabetical order, a timestamp and the signature secret. See [Signing Requests](/concepts/guides/signing-messages) for more details.
+          description: The hash of the request parameters in alphabetical order, a timestamp and the signature secret. See [Signing Messages](/concepts/guides/signing-messages) for more details.
           required: false
           in: query
           schema:
