Use a numeric type to use min/max fields

--- a/definitions/audit.yml
+++ b/definitions/audit.yml
@@ -57,7 +57,7 @@ paths:
           in: query
         - name: size
           schema:
-            type: string
+            type: integer
             minimum: 1
             maximum: 100
             default: 30
