Add description/version info, and an operationId

--- a/definitions/redact.yml
+++ b/definitions/redact.yml
@@ -1,14 +1,20 @@
 ---
 openapi: "3.0.0"
 info:
-  version: "v1"
-  title: "Redact"
+  version: 1.0.1
+  title: "Redact API"
+  description: Nexmo provides [Redact API](https://developer.nexmo.com/redact/overview) to help organisations meet their privacy compliance obligations. Redact API allows you to redact private information on demand, allowing you to meet your own compliance needs.
+  contact:
+    name: Nexmo
+    url: 'https://developer.nexmo.com/'
+    email: devrel@nexmo.com
 servers:
   - url: https://api.nexmo.com
 paths:
   /v1/redact/transaction:
     post:
       summary: Redact a specific message
+      operationId: redact-message
       description: ""
       x-group: transaction
       parameters:
