--- a/definitions/external-accounts.yml
+++ b/definitions/external-accounts.yml
@@ -1,9 +1,13 @@
 openapi: "3.0.0"
 info:
-  version: 0.1.0
+  version: 0.1.1
   title: External Accounts
   description: 'The External Accounts API is used to manage accounts for Viber Service Messages, Facebook Messenger and Whatsapp for use in the [Messages](/messages/overview) and [Dispatch](/dispatch/overview) APIs.'
   x-label: Developer Preview
+  contact:
+    name: Nexmo
+    url: 'https://developer.nexmo.com/'
+    email: devrel@nexmo.com
 servers:
 - url: https://api.nexmo.com/beta/chatapp-accounts
 
