--- a/definitions/messages-olympus.yml
+++ b/definitions/messages-olympus.yml
@@ -3,6 +3,10 @@ info:
   version: 0.3.0
   title: Messages API
   description: 'The Messaging API is a new API that consolidates all messaging channels. It encapsulates a user (developer) from having to use multiple APIs to interact with our various channels such as SMS, MMS, Viber, Facebook Messenger, etc. The API normalises information across all channels to abstracted to, from and content. This API is currently Beta.'
+  contact:
+    name: Nexmo.com
+    email: devrel@nexmo.com
+    url: 'https://developer.nexmo.com/'
   x-label: Beta
 servers:
   - url: https://api.nexmo.com/v0.1
