--- a/definitions/messages-olympus.yml
+++ b/definitions/messages-olympus.yml
@@ -169,11 +169,11 @@ components:
             code:
               type: integer
               example: 1300
-              description: The error code. See [our errors list](/api-errors/messages-olympus) for a list of possible errors
+              description: The error code. See [our errors list](https://developer.nexmo.com/api-errors/messages-olympus) for a list of possible errors
             reason:
               type: string
               example: 'Not part of the provider network'
-              description: Text describing the error. See [our errors list](/api-errors/messages-olympus) for a list of possible errors
+              description: Text describing the error. See [our errors list](https://developer.nexmo.com/api-errors/messages-olympus) for a list of possible errors
         usage:
           type: object
           properties:
