--- a/definitions/account/account.yml
+++ b/definitions/account/account.yml
@@ -2,6 +2,8 @@ openapi: "3.0.2"
 info:
   title: "Nexmo Account API"
   version: "0.1"
+  summary: >-
+    Enables users to manage their Nexmo Account by programmable means. More information is available here: https://developer.nexmo.com/account/overview.
   contact:
     name: Nexmo.com
     url: "https://developer.nexmo.com"
